# EONN

./: .gitignore  CMakeLists.txt  graficas.ipynb  test.json  test_cmsa.json
analisis/: crear_jsons.ipynb  graficar_facil.py  graficas.ipynb
datasets/micro_mnist/: test.csv  train.csv
datasets/mini_box/: test.csv  train.csv
datasets/mini_mnist/: test.csv  train.csv
experimentos/: j_1_4_accuracy_mini_box_SHADE.json  j_1_7_accuracy_mini_box_PSO.json  j_4_6_binary_mini_box_DE.json  test.json
include/: CMSA.hpp  ED.hpp  MLP.hpp  PSO.hpp  SHADE.hpp  utils.hpp
main/: main_MLP.cpp
resultados/: mini_box_1_4_accuracy_SHADE.txt  mini_box_1_7_accuracy_PSO.txt  mini_box_4_6_binary_DE.txt  test.txt
src/: CMSA.cpp  ED.cpp  MLP.cpp  PSO.cpp  SHADE.cpp  utils.cpp
